2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/Container.cs: Call base method when attaching/detaching
	  designer, since Object has some logic in those methods.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/ScrolledWindow.cs, libstetic/wrapper/objects.xml: Set
	  the correct default for ScrolledWindow.XscrollbarPolicy.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/editor/ActionMenuItem.cs: Don't try to remove the menu item
	  controls if they have not been added to the table.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/libsteticui.mdp, libstetic/libstetic.mdp, stetic/stetic.mdp,
	  stetic.mds: Updated.
	* libstetic/wrapper/objects.xml: In ScrolledWindow, ignore the default for
	  scrollbar policy. The default value returned by gtk is not correct.
	  Fixes bug #344196.
	* libstetic/ErrorWidget.cs: Allow exporting projects with unknown widgets.
	* stetic/UIManager.cs: Use gtk stock icons instead of gnome's.

2007-10-26  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/PaletteBackend.cs: Moved defaultActionIcon to ActionComponent.
	* libsteticui/ActionComponent.cs, libsteticui/ComponentType.cs,
	  libstetic/wrapper/Action.cs: Added a label property to the
	  ActionComponent. The label will be shown in the toolbox now. Also show
	  the default action icon if no icon is specified, instead of the missing
	  image icon.

2007-10-25  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/editor/ActionItem.cs: Ignore the SelectionDisposed event if the
	  action item has already been disposed.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs: Remove undo annotations from the xml
	  document when saving.

2007-10-22  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/objects.xml: Set default value for ShowScrollbars
	  property.

2007-10-18  Lluis Sanchez Gual <lluis@novell.com> 
